# cameraStream-binding

./: start.sh
CameraStream/: CMakeLists.txt
CameraStream/config/: virual_camera_config.json
CameraStream/include/: CameraManager.h  CircQProcessedFrames.h  Config.h  FrameProcessor.h  FramesPublisher.h  ImageLoader.h  StreamHandlerIF.h  Types.h  VirtualCamera.h
CameraStream/src/: CameraManager.cpp  CircQProcessedFrames.cpp  Config.cpp  FrameProcessor.cpp  FramesPublisher.cpp  ImageLoader.cpp  VirtualCamera.cpp  main.cpp
ObjectDetection/: ObjectDetection.cpp
